# ml-learning-journey

./: .gitignore  README.md  pyproject.toml
books/handsonmachinelearning/: .gitignore  README.md
books/handsonmachinelearning/code/: README.md
books/handsonmachinelearning/notes/: _template.md
books/handsonmachinelearning/projects/: README.md
books/handsonmachinelearning/summaries/: README.md
bootcamps/machine-learning-y-data-science/01_introduccion/: 01_introduccion_IA.md
bootcamps/machine-learning-y-data-science/02_librerias_python_ds_ml/: 1_Introducción a NumPy.ipynb  2_Introducción a Pandas.ipynb  3_Introducción a Matplotlib.ipynb  4_Ejercicios_de_Práctica.ipynb
bootcamps/machine-learning-y-data-science/03_que_es_ML/: 01_que_es_ML.md  02_aprendizaje_supervisado.md  03_aprendizaje_no_supervisado.md  04_aprendizaje_online_batch.md  05_aprendizaje_instancias_modelos.md
bootcamps/machine-learning-y-data-science/04_regresion_lineal/: 01_regresion_lineal.md  4_Regresión Lineal - Predicción del coste de un incidente de seguridad.ipynb
bootcamps/machine-learning-y-data-science/05_regresion_logistica/: 01_regresion_logistica.md  5_Regresión Logística - Detección de SPAM.ipynb
bootcamps/machine-learning-y-data-science/07_creacion_proyecto_ML/: 01_consideraciones_proyectos_ML.md
bootcamps/python-ds-18-dias/: README.md
bootcamps/python-ds-18-dias/dia02/: 1_variables_numericas.ipynb  2_variables_texto.ipynb  3_funcion_type.ipynb  4_numeros.ipynb  5_operaciones.ipynb  proyecto.ipynb
tutorials/01-fundamentos-python/: numpy-tutorial.ipynb
(+152 files in other folders)
